--- a/k8s/pv.yaml
+++ b/k8s/pv.yaml
@@ -5,11 +5,8 @@ metadata:
 spec:
   capacity:
     storage: 2Gi
-  volumeMode: Filesystem
   accessModes:
     - ReadWriteOnce
-  persistentVolumeReclaimPolicy: Recycle
-  storageClassName: slow
-  mountOptions:
-    - hard
-    - nfsvers=4.1
+    - ReadWriteMany
+  hostPath:
+    path: 'volume'
