adicionado statefullset service, headliness service, cert-manager e ingress

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -20,11 +20,11 @@ spec:
 
           resources:
             requests:
-              cpu: 500m
-              memory: 20Mi
+              cpu: "0.05"
+              memory: "20Mi"
             limits:
-              cpu: 500m
-              memory: 100Mi
+              cpu: "0.05"
+              memory: "100Mi"
 
           startupProbe:
             httpGet:
